syntax = "proto3";

package autovojo_control_plane;

message Empty {}

service AutovojoControlPlane {
    rpc RegisterNode(AutovojoRequest) returns (AutovojoResponse);
    rpc RemoveNode(AutovojoRequest) returns (AutovojoResponse);
    rpc ListNodes(Empty) returns (AutovojoResponse);
}

message AutovojoRequest {
    string node_name = 1;
    string ip = 2;
    int32 port = 3;
}

message NodeDescriptor {
    string node_name = 1;
    string node_ip = 2; 
    int32 node_port = 3; 
}

message Nodes {
    repeated NodeDescriptor nodes = 1;
}

message AutovojoResponse {
    optional Nodes nodes  = 1; 
    string message = 2;
}

